Firefly-1680: FITS image optimizations
 - Flip the image in place without memory allocation, this also means the interation is cut in half
 - Read fits data during render process, this way the data does not have to be cached. Makes for better GC.
 - build large data histogram with threads
 - getByteStretchArray now only allows one call at a time per session using semaphores
      - radically improving memory managment and not really affecting performance
 - Only cache image on second image read.
     - This indicates the user is changing stretch or the user has gone back to this image.
     - Stretch changes often happen in groups.
     - If the user is not changing stretch more moving back and forth then there is not reason to cache the data
- includes response to feedback